--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>Cemil Tan</title>
+   <meta name="author" content="Cemil Tan">
+   <meta name="description" content="Cemil Tan | Computer Engineer">
+   <title>Cemil Tan | Computer Engineer</title>
+   <link rel="icon" href="head.png" sizes="32x32">
    <link rel="stylesheet" href="index.css">
    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
