--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             
         <h3>❤ Views and Followers</h3>
         <div>
-          <a><img src="https://komarev.com/ghpvc/?username=Ctere1&color=red"></a>
+          <a><img src="https://komarev.com/ghpvc/?username=Ctere1"></a>
           <a href="https://github.com/Ctere1?tab=followers"><img src="https://img.shields.io/github/followers/Ctere1?label=Followers&style=social" alt="GitHub Badge"></a>
         </div>
         <br> 
