--- a/index.html
+++ b/index.html
@@ -127,11 +127,6 @@
 
         <ul class="social-list">
 
-          <!-- <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li> -->
 
           <li class="social-item">
             <a href="https://www.linkedin.com/in/cemil-tan-a337b512b/" target="_blank" class="social-link">
@@ -142,6 +137,12 @@
           <li class="social-item">
             <a href="https://www.youtube.com/@cemil_tan/" class="social-link" target="_blank">
               <ion-icon name="logo-youtube"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
+            <a href="https://github.com/Ctere1/" class="social-link" target="_blank">
+              <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
