--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
+            <button class="navbar-link" data-nav-link>Projects</button>
           </li>
 
         </ul>
@@ -197,7 +197,7 @@
           </p>
 
           <p>
-            <b>Education:</b></br>
+            <b>Education</b></br>
   
             &#x2022; Ankara University | 2023</br> 
             [Computer Engineering Bachelor's Degree]
@@ -211,8 +211,10 @@
           </p>
 
           <p>
-            <b>I have experience as a:</b></br>
+            <b>Experience</b></br>
 
+            I have experience as a :</br> 
+            
             &#x2022; IT Intern</br> 
 
             &#x2022; Backend Developer</br> 
@@ -330,13 +332,13 @@
 
 
       <!--
-        - #PORTFOLIO
+        - #PROJECTS
       -->
 
-      <article class="portfolio" data-page="portfolio">
+      <article class="projects" data-page="projects">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">Projects</h2>
         </header>
 
         <section class="projects">
@@ -347,8 +349,8 @@
               <button class="active" data-filter-btn>All</button>
             </li>
 
-            <!-- <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+            <li class="filter-item">
+              <button data-filter-btn>Network</button>
             </li>
 
             <li class="filter-item">
@@ -357,7 +359,11 @@
 
             <li class="filter-item">
               <button data-filter-btn>Web development</button>
-            </li> -->
+            </li>
+
+            <li class="filter-item">
+              <button data-filter-btn>Computer science</button>
+            </li>
 
           </ul>
 
@@ -379,8 +385,8 @@
                 <button data-select-item>All</button>
               </li>
 
-              <!-- <li class="select-item">
-                <button data-select-item>Web design</button>
+              <li class="select-item">
+                <button data-select-item>Network</button>
               </li>
 
               <li class="select-item">
@@ -389,7 +395,11 @@
 
               <li class="select-item">
                 <button data-select-item>Web development</button>
-              </li> -->
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Computer science</button>
+              </li>
 
             </ul>
 
@@ -397,7 +407,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="network">
               <a href="https://github.com/Ctere1" target="_blank">
 
                 <figure class="project-img">
@@ -410,7 +420,7 @@
 
                 <h3 class="project-title">Radius Server</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Network access server</p>
 
               </a>
             </li>
@@ -482,7 +492,7 @@
 
                 <h3 class="project-title">React Native Chat</h3>
 
-                <p class="project-category">Application</p>
+                <p class="project-category">Applications</p>
 
               </a>
             </li>
@@ -613,7 +623,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="computer science">
               <a href="https://github.com/Ctere1/Algorithms" target="_blank">
 
                 <figure class="project-img">
@@ -632,7 +642,7 @@
             </li>
 
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="computer science">
               <a href="https://github.com/Ctere1/OperatingSystems" target="_blank">
 
                 <figure class="project-img">
