--- a/index.html
+++ b/index.html
@@ -362,6 +362,10 @@
             </li>
 
             <li class="filter-item">
+              <button data-filter-btn>Games</button>
+            </li>
+
+            <li class="filter-item">
               <button data-filter-btn>Computer science</button>
             </li>
 
@@ -395,6 +399,10 @@
 
               <li class="select-item">
                 <button data-select-item>Web development</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Games</button>
               </li>
 
               <li class="select-item">
@@ -619,6 +627,42 @@
                 <h3 class="project-title">Stock Management API </h3>
 
                 <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="games">
+              <a href="https://github.com/Ctere1/BTK-UNITY" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/games.jpg" alt="games" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">BTK-UNITY</h3>
+
+                <p class="project-category">Games</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="games">
+              <a href="https://github.com/Ctere1/cli-tool" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/game2.jpg" alt="games" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">CLI Mini Game</h3>
+
+                <p class="project-category">Games</p>
 
               </a>
             </li>
