--- a/index.html
+++ b/index.html
@@ -415,6 +415,24 @@
 
           <ul class="project-list">
 
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://github.com/Ctere1/spring-boot" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/project-2.jpg" alt="spring_boot" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Spring Boot</h3>
+
+                <p class="project-category">Web development</p>
+
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="network">
               <a href="https://github.com/Ctere1" target="_blank">
 
